crates/pardosa-schema/tests/compile_fail/evt_010.stderr
error: EVT-009: GenomeSafe: #[serde(tag = "...")] is not supported on type. Only externally tagged enums (serde default) are compatible with fixed discriminant-based layout.
 --> tests/compile_fail/evt_010.rs:4:9
  |
4 | #[serde(tag = "k", content = "v")]
  |         ^^^
